--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "sqlite3": "^4.0.2"
   }
 }
